Pruning the global namespace. Refining the boxes.

--- a/DataBoss/DataBoss.csproj
+++ b/DataBoss/DataBoss.csproj
@@ -86,7 +86,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Version.cs" />
     <Compile Include="Schema\DataBossHistory.cs" />
-    <Compile Include="SqlConnectionExtensions.cs" />
+    <Compile Include="Diagnostics\SqlConnectionExtensions.cs" />
     <Compile Include="SqlServer\SqlErrors.cs" />
     <Compile Include="SqlServer\SysObjects.cs" />
     <Compile Include="Testing\DatabaseSetup.cs" />
