--- a/DataBoss/DataBoss.csproj
+++ b/DataBoss/DataBoss.csproj
@@ -1,41 +1,18 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
-  <Import Project="..\DataBoss.props" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{C698683C-1C33-46FE-BDA9-54B54144A7CE}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DataBoss</RootNamespace>
-    <AssemblyName>DataBoss</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
+    <TargetFramework>net45</TargetFramework>
     <OutputPath>$(SolutionDir)..\Build\$(MSBuildProjectName)\$(Configuration)</OutputPath>
     <IntermediateOutputPath>$(SolutionDir)..\Build\obj\$(MSBuildProjectName)</IntermediateOutputPath>
-    <NuGetPackageImportStamp>
-    </NuGetPackageImportStamp>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <DebugType>none</DebugType>
-    <Optimize>true</Optimize>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <UseVSHostingProcess>false</UseVSHostingProcess>
+  <PropertyGroup>
+    <Description>Your data. Like a Boss.</Description>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="DataBoss.Data, Version=0.0.0.39, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\DataBoss.Data.0.0.39\lib\net45\DataBoss.Data.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -44,71 +21,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DataBoss.cs" />
-    <Compile Include="DataBossCommandAttribute.cs" />
-    <Compile Include="Data\SqlQuery.cs" />
-    <Compile Include="Data\SqlQueryFrom.cs" />
-    <Compile Include="Data\SqlQueryJoin.cs" />
-    <Compile Include="Data\SqlQuerySelect.cs" />
-    <Compile Include="Data\SqlStringBuilder.cs" />
-    <Compile Include="Diagnostics\SqlServerMaintenancePlanWizard.cs" />
-    <Compile Include="Migrations\DataBossCompositeMigration.cs" />
-    <Compile Include="DataBossConfiguration.cs" />
-    <Compile Include="DataBossConsoleLog.cs" />
-    <Compile Include="Migrations\DataBossLogMigrationScope.cs" />
-    <Compile Include="Migrations\DataBossDirectoryMigration.cs" />
-    <Compile Include="DataBossMigrationExtensions.cs" />
-    <Compile Include="Migrations\DataBossMigrationInfo.cs" />
-    <Compile Include="Migrations\DataBossMigrationPath.cs" />
-    <Compile Include="DataBossMigrator.cs" />
-    <Compile Include="DataBossQueryBatch.cs" />
-    <Compile Include="Migrations\DataBossScriptMigrationScope.cs" />
-    <Compile Include="Migrations\DataBossMigrationScope.cs" />
-    <Compile Include="DataBossShellExecute.cs" />
-    <Compile Include="Migrations\DataBossQueryMigration.cs" />
-    <Compile Include="DataGrid.cs" />
-    <Compile Include="Diagnostics\DatabaseInfo.cs" />
-    <Compile Include="Diagnostics\QueryInfo.cs" />
-    <Compile Include="Diagnostics\QuerySample.cs" />
-    <Compile Include="Diagnostics\RequestInfo.cs" />
-    <Compile Include="Diagnostics\SqlServer2000QuerySampler.cs" />
-    <Compile Include="Diagnostics\SqlServer2005QuerySampler.cs" />
-    <Compile Include="Diagnostics\SqlServerQuerySampler.cs" />
-    <Compile Include="DictionaryExtensions.cs" />
-    <Compile Include="DisplayObject.cs" />
-    <Compile Include="EventHandlerExtensions.cs" />
-    <Compile Include="IDataBossLog.cs" />
-    <Compile Include="IDataBossMigration.cs" />
-    <Compile Include="IDataBossMigrationScope.cs" />
-    <Compile Include="ObjectVisualizer.cs" />
-    <Compile Include="PowerArgs.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Properties\Version.cs" />
-    <Compile Include="Schema\DataBossHistory.cs" />
-    <Compile Include="Diagnostics\SqlConnectionExtensions.cs" />
-    <Compile Include="SequenceDifferenceFinder.cs" />
-    <Compile Include="SqlServer\SqlErrors.cs" />
-    <Compile Include="SqlServer\SysObjects.cs" />
-    <Compile Include="Testing\DatabaseSetup.cs" />
-    <Compile Include="TypeExtensions.cs" />
-  </ItemGroup>
-  <ItemGroup>
     <EmbeddedResource Include="Usage.txt">
       <LogicalName>Usage</LogicalName>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\DataBoss.Data\DataBoss.Data.csproj">
-      <Project>{4762c02c-a4cd-4c1c-8eca-bc58034c6042}</Project>
-      <Name>DataBoss.Data</Name>
-    </ProjectReference>
+    <PackageReference Include="DataBoss.Data" Version="0.0.39" />
   </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
 </Project>
