--- a/DataBoss.Data/DataBoss.Data.csproj
+++ b/DataBoss.Data/DataBoss.Data.csproj
@@ -21,4 +21,10 @@
     <PackageReference Include="System.ComponentModel.Annotations" Version="4.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="mscorlib">
+      <HintPath>C:\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.5\mscorlib.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
