--- a/DataBoss/DataBoss.csproj
+++ b/DataBoss/DataBoss.csproj
@@ -4,10 +4,6 @@
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="DataBoss.Data, Version=0.0.0.39, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>packages\DataBoss.Data.0.0.39\lib\net45\DataBoss.Data.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -21,6 +17,6 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="DataBoss.Data" Version="0.0.39" />
+    <ProjectReference Include="..\DataBoss.Data\DataBoss.Data.csproj" />
   </ItemGroup>
 </Project>
