byte, short, int, long, float - implicit conversions added. to StandardConversions.

--- a/DataBoss.Specs/DataBoss.Specs.csproj
+++ b/DataBoss.Specs/DataBoss.Specs.csproj
@@ -58,6 +58,7 @@
     <Compile Include="DataBossScripterSpec.cs" />
     <Compile Include="DataBossSpec.cs" />
     <Compile Include="DataBossQueryMigrationSpec.cs" />
+    <Compile Include="Data\ConverterCollectionSpec.cs" />
     <Compile Include="Data\DbObjectReaderSpec.cs" />
     <Compile Include="Data\FieldMappingSpec.cs" />
     <Compile Include="Data\SequenceDataReaderSpec.cs" />
