--- a/NuGet.config
+++ b/NuGet.config
@@ -3,4 +3,7 @@
     <config>
         <add key="repositoryPath" value="Build\packages" />
     </config>
+    <packageSources>
+        <add key="self" value=".\Build" />
+    </packageSources>
 </configuration>
