--- a/DataBoss.Specs/DataBoss.Specs.csproj
+++ b/DataBoss.Specs/DataBoss.Specs.csproj
@@ -15,7 +15,8 @@
     <ProjectReference Include="..\DataBoss.Data\DataBoss.Data.csproj" />
     <ProjectReference Include="..\DataBoss\DataBoss.csproj" />
     <PackageReference Include="System.ComponentModel.Annotations" Version="4.4.*" />
-    <PackageReference Include="Cone" Version="2018.6.21" /> 
+    <PackageReference Include="Cone" Version="2018.6.21" />
+    <PackageReference Include="System.ValueTuple" Version="4.5.0" /> 
     <DotNetCliToolReference Include="dotnet-conesole" Version="2018.6.21" /> 
   </ItemGroup>
 </Project>
