--- a/DataBoss.Data/DataBoss.Data.csproj
+++ b/DataBoss.Data/DataBoss.Data.csproj
@@ -17,7 +17,7 @@
 
   <ItemGroup>
     <PackageReference Include="System.ComponentModel.Annotations" Version="4.4.*" />
-    <PackageReference Include="System.ValueTuple" Version="4.5.0" Condition="'$(TargetFramework)'=='net45'" />
+    <PackageReference Condition="'$(TargetFramework)'=='net45'" Include="System.ValueTuple" Version="4.5.0" />
   </ItemGroup>
 
   <ItemGroup>
