--- a/DataBoss.Specs/DataBoss.Specs.csproj
+++ b/DataBoss.Specs/DataBoss.Specs.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net452</TargetFramework>
+    <TargetFrameworks>net452</TargetFrameworks>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
    <ItemGroup>
@@ -15,7 +15,7 @@
     <ProjectReference Include="..\DataBoss.Data\DataBoss.Data.csproj" />
     <ProjectReference Include="..\DataBoss\DataBoss.csproj" />
     <PackageReference Include="System.ComponentModel.Annotations" Version="4.4.*" />
-    <PackageReference Include="Cone" Version="2018.6.21" />
+    <PackageReference Include="Cone" Version="2018.7.9" />
     <PackageReference Include="System.ValueTuple" Version="4.5.0" /> 
     <DotNetCliToolReference Include="dotnet-conesole" Version="2018.6.21" /> 
   </ItemGroup>
