Packaging updates and .70!

--- a/DataBoss.Linq/DataBoss.Linq.csproj
+++ b/DataBoss.Linq/DataBoss.Linq.csproj
@@ -1,11 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net45</TargetFrameworks>
-    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
-    <AssemblyVersion>$(PackageVersion)</AssemblyVersion>
+    <TargetFrameworks>netstandard2.0;net452;net47</TargetFrameworks>
+    <LangVersion>7.3</LangVersion>
   </PropertyGroup>
-
-  <ItemGroup>
-    <Compile Include="..\DataBoss\Properties\Version.cs" Link="Version.cs" />
-  </ItemGroup>
 </Project>
