--- a/DataBoss.Program/DataBoss.Program.csproj
+++ b/DataBoss.Program/DataBoss.Program.csproj
@@ -1,66 +1,17 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
-  <Import Project="..\DataBoss.props" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{8E941F8D-9745-44C9-AC73-DF5E079D8E8E}</ProjectGuid>
+    <TargetFramework>net452</TargetFramework>
+    <LangVersion>7.3</LangVersion>
+    <ApplicationIcon />
     <OutputType>Exe</OutputType>
-    <RootNamespace>DataBoss</RootNamespace>
-    <AssemblyName>DataBoss.Program</AssemblyName>
-    <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
-    <TargetFrameworkProfile />
+    <StartupObject />
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <DebugType>none</DebugType>
-    <Optimize>true</Optimize>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="Microsoft.CSharp" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="..\DataBoss\Properties\Version.cs">
-      <Link>Properties\Version.cs</Link>
-    </Compile>
-    <Compile Include="Program.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\DataBoss.Data\DataBoss.Data.csproj">
-      <Project>{4762c02c-a4cd-4c1c-8eca-bc58034c6042}</Project>
-      <Name>DataBoss.Data</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\DataBoss.Linq\DataBoss.Linq.csproj">
-      <Project>{43a469d3-fd7f-4bf7-9fa8-c9a9afd495fa}</Project>
-      <Name>DataBoss.Linq</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\DataBoss\DataBoss.csproj">
-      <Project>{c698683c-1c33-46fe-bda9-54b54144a7ce}</Project>
-      <Name>DataBoss</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="app.config" />
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+
   <Target Name="AfterBuild">
     <Move SourceFiles="$(OutputPath)$(AssemblyName).exe" DestinationFiles="$(OutputPath)DataBoss.exe" />
   </Target>
+
+  <ItemGroup>
+    <ProjectReference Include="..\DataBoss\DataBoss.csproj" />
+  </ItemGroup>
 </Project>
