--- a/DataBoss.Specs/DataBoss.Specs.csproj
+++ b/DataBoss.Specs/DataBoss.Specs.csproj
@@ -1,7 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>net452</TargetFrameworks>
+    <TargetFrameworks>net47</TargetFrameworks>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+    <LangVersion>7.3</LangVersion>
   </PropertyGroup>
    <ItemGroup>
     <Reference Include="System" />
