a wild DataReaderSchemaTable has appeared!

--- a/DataBoss.DataPackage/DataBoss.DataPackage.csproj
+++ b/DataBoss.DataPackage/DataBoss.DataPackage.csproj
@@ -4,6 +4,7 @@
     <LangVersion>7.3</LangVersion>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="CsvHelper" Version="12.1.2" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
     <PackageReference Condition="'$(TargetFramework)'=='net452'" Include="System.ValueTuple" Version="4.5.0" />
   </ItemGroup>
