--- a/DataBoss.DataPackage/DataBoss.DataPackage.csproj
+++ b/DataBoss.DataPackage/DataBoss.DataPackage.csproj
@@ -6,6 +6,7 @@
   <ItemGroup>
     <PackageReference Include="CsvHelper" Version="12.1.2" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+    <PackageReference Include="System.IO.Compression" Version="4.3.0" />
     <PackageReference Condition="'$(TargetFramework)'=='net452'" Include="System.ValueTuple" Version="4.5.0" />
   </ItemGroup>
   <ItemGroup>
