--- a/DataBoss.Cli/DataBoss.Cli.csproj
+++ b/DataBoss.Cli/DataBoss.Cli.csproj
@@ -1,14 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net452</TargetFramework>
+    <TargetFrameworks>net452;netcoreapp2.1</TargetFrameworks>
     <LangVersion>7.3</LangVersion>
     <ApplicationIcon />
     <OutputType>Exe</OutputType>
-    <StartupObject />
+    <StartupObject>DataBoss.Program</StartupObject>
   </PropertyGroup>
 
-  <Target Name="AfterBuild">
+  <Target Name="CopyOutput" AfterTargets="Build" Condition="'$(TargetFramework)'=='net452'">
     <Move SourceFiles="$(OutputPath)$(AssemblyName).exe" DestinationFiles="$(OutputPath)DataBoss.exe" />
+    <Move SourceFiles="$(OutputPath)$(AssemblyName).exe.config" DestinationFiles="$(OutputPath)DataBoss.exe.config" />
   </Target>
 
   <ItemGroup>
