--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -8,10 +8,10 @@
         <Authors>Torbjörn Gyllebring</Authors>
         <Description>Your data. Like a Boss.</Description>
         <RepositoryUrl>https://github.com/drunkcod/DataBoss</RepositoryUrl>
-        <VersionPrefix>0.0.75</VersionPrefix>
-        <AssemblyVersion>0.0.0.75</AssemblyVersion>
+        <VersionPrefix>0.0.76</VersionPrefix>
+        <!--<VersionSuffix>beta-1</VersionSuffix>-->
+        <AssemblyVersion>0.0.0.76</AssemblyVersion>
         <AssemblyInformationalVersion>$(VersionPrefix)</AssemblyInformationalVersion>
-        <AssemblyFileVersion>2020.02.19</AssemblyFileVersion>
-        <PackageVersion>$(AssemblyInformationalVersion)</PackageVersion>
+        <AssemblyFileVersion>2020.03.09</AssemblyFileVersion>
     </PropertyGroup>
 </Project>
