--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -8,10 +8,10 @@
         <Authors>Torbjörn Gyllebring</Authors>
         <Description>Your data. Like a Boss.</Description>
         <RepositoryUrl>https://github.com/drunkcod/DataBoss</RepositoryUrl>
-        <VersionPrefix>0.0.77</VersionPrefix>
-        <!--<VersionSuffix>beta-1</VersionSuffix>-->
-        <AssemblyVersion>0.0.0.77</AssemblyVersion>
+        <VersionPrefix>0.0.78</VersionPrefix>
+        <VersionSuffix>rc.1</VersionSuffix>
+        <AssemblyVersion>0.0.0.78</AssemblyVersion>
         <AssemblyInformationalVersion>$(VersionPrefix)</AssemblyInformationalVersion>
-        <AssemblyFileVersion>2020.03.11</AssemblyFileVersion>
+        <AssemblyFileVersion>2020.05.03</AssemblyFileVersion>
     </PropertyGroup>
 </Project>
