--- a/DataBoss.DataPackage.Specs/DataBoss.DataPackage.Specs.csproj
+++ b/DataBoss.DataPackage.Specs/DataBoss.DataPackage.Specs.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Cone" Version="2019.8.14" />
+    <PackageReference Include="Check.That" Version="0.0.2" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
