--- a/Source/DataBoss.Data/DataBoss.Data.csproj
+++ b/Source/DataBoss.Data/DataBoss.Data.csproj
@@ -12,4 +12,16 @@
   <ItemGroup>
     <ProjectReference Include="..\DataBoss.Linq\DataBoss.Linq.csproj" />
   </ItemGroup>
+
+  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
+    <PackageReference Include="System.Threading.Channels">
+      <Version>5.0.0</Version>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup Condition="'$(TargetFramework)' == 'net472'">
+    <PackageReference Include="System.Threading.Channels">
+      <Version>5.0.0</Version>
+    </PackageReference>
+  </ItemGroup>
 </Project>
