--- a/Source/DataBoss.DataPackage.Specs/DataBoss.DataPackage.Specs.csproj
+++ b/Source/DataBoss.DataPackage.Specs/DataBoss.DataPackage.Specs.csproj
@@ -1,9 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
-
-    <IsPackable>false</IsPackable>
+	  <TargetFramework>netcoreapp3.1</TargetFramework>
+	  <LangVersion>latest</LangVersion>
+	  <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
