Cleanup + IDataRecord.ToJsonObject

--- a/Source/DataBoss.DataPackage.Specs/DataBoss.DataPackage.Specs.csproj
+++ b/Source/DataBoss.DataPackage.Specs/DataBoss.DataPackage.Specs.csproj
@@ -21,6 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\DataBoss.Labs\DataBoss.Labs.csproj" />
     <ProjectReference Include="..\DataBoss.DataPackage\DataBoss.DataPackage.csproj" />
   </ItemGroup>
 
