--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -8,9 +8,10 @@
         <Authors>Torbjörn Gyllebring</Authors>
         <Description>Your data. Like a Boss.</Description>
         <RepositoryUrl>https://github.com/drunkcod/DataBoss</RepositoryUrl>
-        <VersionPrefix>0.0.85</VersionPrefix>
-        <AssemblyVersion>0.0.0.85</AssemblyVersion>
+        <VersionPrefix>0.0.86</VersionPrefix>
+		<VersionSuffix>-alpha</VersionSuffix>
+        <AssemblyVersion>0.0.0.86</AssemblyVersion>
         <AssemblyInformationalVersion>$(VersionPrefix)</AssemblyInformationalVersion>
-        <AssemblyFileVersion>2021.02.23</AssemblyFileVersion>
+        <AssemblyFileVersion>2021.03.03</AssemblyFileVersion>
     </PropertyGroup>
 </Project>
