--- a/Source/DataBoss.DataPackage/DataBoss.DataPackage.csproj
+++ b/Source/DataBoss.DataPackage/DataBoss.DataPackage.csproj
@@ -1,15 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net472</TargetFrameworks>
-    <LangVersion>latest</LangVersion>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|netstandard2.0|AnyCPU'">
-    <DebugType>portable</DebugType>
-    <DebugSymbols>true</DebugSymbols>
+	  <TargetFrameworks>netstandard2.1;netstandard2.0;net472</TargetFrameworks>
+	  <LangVersion>latest</LangVersion>
+	  <DefineConstants Condition="'$(TargetFramework)'=='netstandard2.1'">$(DefineConstants);NETSTANDARD2_1</DefineConstants>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CsvHelper" Version="15.0.5" />
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="CsvHelper" Version="26.1.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="System.Collections.Immutable" Version="5.0.0" />
     <PackageReference Include="System.IO.Compression" Version="4.3.0" />
     <PackageReference Include="System.Text.Encodings.Web" Version="5.0.1" />
