--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -9,7 +9,7 @@
         <Description>Your data. Like a Boss.</Description>
         <RepositoryUrl>https://github.com/drunkcod/DataBoss</RepositoryUrl>
         <VersionPrefix>0.0.92</VersionPrefix>
-		<VersionSuffix>rc1</VersionSuffix>
+		<!--VersionSuffix>rc.1</VersionSuffix-->
         <AssemblyVersion>0.0.0.92</AssemblyVersion>
         <AssemblyInformationalVersion>$(VersionPrefix)</AssemblyInformationalVersion>
         <AssemblyFileVersion>2021.04.29</AssemblyFileVersion>
