--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -8,10 +8,10 @@
         <Authors>Torbjörn Gyllebring</Authors>
         <Description>Your data. Like a Boss.</Description>
         <RepositoryUrl>https://github.com/drunkcod/DataBoss</RepositoryUrl>
-        <VersionPrefix>0.0.93</VersionPrefix>
-		<VersionSuffix>beta.1</VersionSuffix>
-        <AssemblyVersion>0.0.0.93</AssemblyVersion>
+        <VersionPrefix>0.0.94</VersionPrefix>
+		<VersionSuffix>beta.2</VersionSuffix>
+        <AssemblyVersion>$(VersionPrefix)</AssemblyVersion>
         <AssemblyInformationalVersion>$(VersionPrefix)</AssemblyInformationalVersion>
-        <AssemblyFileVersion>2021.05.08</AssemblyFileVersion>
+        <AssemblyFileVersion>2021.05.09</AssemblyFileVersion>
     </PropertyGroup>
 </Project>
