--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -9,9 +9,9 @@
         <Description>Your data. Like a Boss.</Description>
         <RepositoryUrl>https://github.com/drunkcod/DataBoss</RepositoryUrl>
         <VersionPrefix>0.0.94</VersionPrefix>
-		<VersionSuffix>beta.2</VersionSuffix>
+		<!--VersionSuffix>beta.2</VersionSuffix-->
         <AssemblyVersion>$(VersionPrefix)</AssemblyVersion>
         <AssemblyInformationalVersion>$(VersionPrefix)</AssemblyInformationalVersion>
-        <AssemblyFileVersion>2021.05.09</AssemblyFileVersion>
+        <AssemblyFileVersion>2021.05.18</AssemblyFileVersion>
     </PropertyGroup>
 </Project>
