--- a/Source/DataBoss.Data/DataBoss.Data.csproj
+++ b/Source/DataBoss.Data/DataBoss.Data.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>net5.0;netstandard2.0;net472;net452</TargetFrameworks>
+    <TargetFrameworks>net5.0;netstandard2.1;netstandard2.0;net472;net452</TargetFrameworks>
     <LangVersion>9.0</LangVersion>
   </PropertyGroup>
 
@@ -11,17 +11,5 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DataBoss.Linq\DataBoss.Linq.csproj" />
-  </ItemGroup>
-
-  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
-    <PackageReference Include="System.Threading.Channels">
-      <Version>5.0.0</Version>
-    </PackageReference>
-  </ItemGroup>
-
-  <ItemGroup Condition="'$(TargetFramework)' == 'net472'">
-    <PackageReference Include="System.Threading.Channels">
-      <Version>5.0.0</Version>
-    </PackageReference>
   </ItemGroup>
 </Project>
