--- a/Source/DataBoss.Linq/DataBoss.Linq.csproj
+++ b/Source/DataBoss.Linq/DataBoss.Linq.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net452;net472</TargetFrameworks>
+    <TargetFrameworks>netstandard2.1;netstandard2.0;net472;net452</TargetFrameworks>
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
 </Project>
