MemoryPool powered batching.

--- a/Source/DataBoss.Specs/DataBoss.Specs.csproj
+++ b/Source/DataBoss.Specs/DataBoss.Specs.csproj
@@ -29,4 +29,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Specs\Linq\" />
+  </ItemGroup>
 </Project>
