Shuffle stuff around. Reduce duplication.

--- a/Source/DataBoss.Cli/DataBoss.Cli.csproj
+++ b/Source/DataBoss.Cli/DataBoss.Cli.csproj
@@ -13,6 +13,7 @@
   </Target>
 
   <ItemGroup>
+    <ProjectReference Include="..\DataBoss.PowerArgs\DataBoss.PowerArgs.csproj" />
     <ProjectReference Include="..\DataBoss\DataBoss.csproj" />
   </ItemGroup>
 </Project>
