--- a/Source/DataBoss.DataPackage.Specs/DataBoss.DataPackage.Specs.csproj
+++ b/Source/DataBoss.DataPackage.Specs/DataBoss.DataPackage.Specs.csproj
@@ -24,6 +24,7 @@
 	<ItemGroup>
 		<ProjectReference Include="..\..\DataBoss.Labs\DataBoss.Labs.csproj" />
 		<ProjectReference Include="..\DataBoss.DataPackage\DataBoss.DataPackage.csproj" />
+		<ProjectReference Include="..\DataBoss.PowerArgs\DataBoss.PowerArgs.csproj" />
 	</ItemGroup>
 
 </Project>
