Let's get this one out the door.

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -4,14 +4,15 @@
         <OutputPath>$(MSBuildThisFileDirectory)\Build\$(MSBuildProjectName)\$(Configuration)</OutputPath>
     </PropertyGroup>
     
-    <PropertyGroup>
-        <Authors>Torbjörn Gyllebring</Authors>
-        <Description>Your data. Like a Boss.</Description>
-        <RepositoryUrl>https://github.com/drunkcod/DataBoss</RepositoryUrl>
-        <VersionPrefix>0.0.98</VersionPrefix>
-		    <VersionSuffix>rc.2</VersionSuffix>
-        <AssemblyVersion>$(VersionPrefix)</AssemblyVersion>
-        <AssemblyInformationalVersion>$(VersionPrefix)</AssemblyInformationalVersion>
-        <AssemblyFileVersion>2021.10.08</AssemblyFileVersion>
-    </PropertyGroup>
+  <PropertyGroup>
+    <Authors>Torbjörn Gyllebring</Authors>
+    <Description>Your data. Like a Boss.</Description>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <RepositoryUrl>https://github.com/drunkcod/DataBoss</RepositoryUrl>
+    <VersionPrefix>0.0.98</VersionPrefix>
+    <!-->VersionSuffix>rc.2</VersionSuffix-->
+    <AssemblyVersion>$(VersionPrefix)</AssemblyVersion>
+    <AssemblyInformationalVersion>$(VersionPrefix)</AssemblyInformationalVersion>
+    <AssemblyFileVersion>2021.10.16</AssemblyFileVersion>
+  </PropertyGroup>
 </Project>
