--- a/Source/DataBoss.Testing.SqlServer/DataBoss.Testing.SqlServer.csproj
+++ b/Source/DataBoss.Testing.SqlServer/DataBoss.Testing.SqlServer.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFrameworks>net452;net472;netstandard2.0</TargetFrameworks>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
