--- a/Source/DataBoss.Migrations/DataBoss.Migrations.csproj
+++ b/Source/DataBoss.Migrations/DataBoss.Migrations.csproj
@@ -1,11 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net6.0;netstandard2.1;netstandard2.0;net472;net452</TargetFrameworks>
+    <TargetFrameworks>net7.0;netstandard2.1;netstandard2.0;net472</TargetFrameworks>
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="NpgSql" Version="7.0.6" />
     <PackageReference Include="System.Memory" Version="4.5.5" />
   </ItemGroup>
 
